--- a/BarrysPeanutsAkka/pom.xml
+++ b/BarrysPeanutsAkka/pom.xml
@@ -13,6 +13,12 @@
         <maven.compiler.target>11</maven.compiler.target>
         <akka.version>2.8.2</akka.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
