--- a/Temporal/BarrysPeanutsJava/pom.xml
+++ b/Temporal/BarrysPeanutsJava/pom.xml
@@ -25,11 +25,17 @@
       <version>1.19.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-nop</artifactId>
-      <version>2.0.6</version>
-    </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.32</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.7.32</version>
+      </dependency>
 
     <dependency>
       <groupId>io.temporal</groupId>
