--- a/BarrysPeanutsAkkaFlat/pom.xml
+++ b/BarrysPeanutsAkkaFlat/pom.xml
@@ -74,7 +74,7 @@
                     <arguments>
                         <argument>-classpath</argument>
                         <classpath />
-                        <argument>com.example.AkkaQuickstart</argument>
+                        <argument>barryspeanuts.App</argument>
                     </arguments>
                 </configuration>
             </plugin>
