apllying Spotless to format code

--- a/BarrysPeanutsAkkaFlat/pom.xml
+++ b/BarrysPeanutsAkkaFlat/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <spotless.version>2.38.0</spotless.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <akka.version>2.8.2</akka.version>
@@ -76,6 +77,16 @@
                         <classpath/>
                         <argument>barryspeanuts.App</argument>
                     </arguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless.version}</version>
+                <configuration>
+                    <java>
+                        <googleJavaFormat/>
+                    </java>
                 </configuration>
             </plugin>
         </plugins>
