did formatting using spotless

--- a/BarrysPeanutsTemporalJava/pom.xml
+++ b/BarrysPeanutsTemporalJava/pom.xml
@@ -13,6 +13,7 @@
     <url>http://www.example.com</url>
 
     <properties>
+        <spotless.version>2.38.0</spotless.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -100,6 +101,16 @@
                 <plugin>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>3.0.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.diffplug.spotless</groupId>
+                    <artifactId>spotless-maven-plugin</artifactId>
+                    <version>${spotless.version}</version>
+                    <configuration>
+                        <java>
+                            <googleJavaFormat/>
+                        </java>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
